@@ -14,6 +14,7 @@ ufw (0.36.2) UNRELEASED; urgency=medium
   * add '-h' and show help with no args (LP: #1965462)
   * src/backend.py: add get_rules_ipv4() and get_rules_ipv6() (LP: #1951018)
   * tests/check-requirements: update for python 3.10+
+  * tests/root: normalize 'ACCEPT {all,tcp}' and 'ACCEPT N' for newer systems
 
  -- Jamie Strandboge <jdstrand@ubuntu.com>  Tue, 16 May 2023 07:58:56 -0500
 
